# aitunes

./: .gitignore  CMakeLists.txt  README.md  WINDOWS_BUILD_GUIDE.md  build.bat  build.sh  buildAndTest.sh  build_windows.bat  build_windows.ps1  caitunes  download_deps.bat  download_deps.sh  main.cpp  test_build.sh  test_windows_build.bat
src/: main.cpp
